Css fix images on mobile.

--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -35,6 +35,7 @@
 
     img {
       display: block;
+      width: 100%;
     }
 
     .description {
@@ -95,7 +96,7 @@
         margin: 0.5em 0;
       }
 
-      img,
+      .image-container,
       .description {
         padding-left: 0;
         width: 100%;
